# coq-prelude

./: .gitignore  .travis.yml  Files  Makefile  Makefile.coq.local  Makefile.local  Prelude.All.html  Prelude.Control.Classes.html  Prelude.Control.Function.html  Prelude.Control.Identity.html  Prelude.Control.Option.html  Prelude.Control.Reader.html  Prelude.Control.State.html  Prelude.Control.Sum.html  Prelude.Control.html  Prelude.Data.Byte.html  Prelude.Data.Bytes.html  Prelude.Data.Equality.html  Prelude.Data.Int.html  Prelude.Data.Nat.html  Prelude.Data.Open.html  Prelude.Data.Text.html  Prelude.Data.Void.html  Prelude.Data.Z.html  Prelude.Init.html  Prelude.Tactics.html  README.md  _CoqProject  configure.sh  dune-project  guix.scm  index.html  toc.html
src/: bytestring.ml  bytestring.mli  dune  sum.ml  uint63.mli
tests/: bytestring.ml  dune
theories/: All.v  Control.v  Equality.v  Extraction.v  Init.v  ML.v  Prelude.v  PropBool.v  Tactics.v  dune
theories/Control/: Alternative.v  Applicative.v  Classes.v  Either.v  Function.v  Functor.v  IO.v  Identity.v  List.v  Monad.v  Option.v  Reader.v  State.v  Sum.v
theories/Control/IO/: ExtrHaskell.v
theories/Control/Monad/: State.v
theories/Data/: Bool.v  Byte.v  Bytes.v  Bytestring.v  Either.v  Equality.v  Function.v  Int.v  Integer.v  List.v  Nat.v  Open.v  Option.v  Prod.v  Ring.v  Sum.v  Text.v  Utf8Char.v  Void.v  Z.v
