(coq.theory
  (name Prelude)
  (public_name prelude.Prelude)
  (modules Init
           Data.Equality
           Data.Bytes
           Data.Nat
           Data.Open
           Data.Void
           Data.Z
           Control
           Control.Alternative
           Control.Classes
           Control.Function
           Control.Identity
           Control.State
           Control.Reader
           Control.Option
           Control.Sum
           Tactics
           All))

(include_subdirs qualified)