(coq.theory
  (name Prelude)
  (package prelude)
  (modules Init
           Data.Equality
           Data.Byte
           Data.Bytes
           Data.Text
           Data.Nat
           Data.Int
           Data.Open
           Data.Void
           Data.Z
           Control
           Control.Classes
           Control.Function
           Control.Identity
           Control.State
           Control.Reader
           Control.Option
           Control.Sum
           Tactics
           All))

(include_subdirs qualified)